--- a/计算机/日报 20210717.md
+++ b/计算机/日报 20210717.md
@@ -38,5 +38,14 @@
 - V8如何使用新生代（副垃圾回收器） 和 老生代（主垃圾回收器）进行垃圾回收？
 - 标记-清除 和 标记-整理有什么区别？
 - 为了优化**标记-清除方法**， 有哪些优化方法？
--  
+-  什么是并行垃圾清除？ 什么是并发垃圾清除？
+-  增量垃圾清除的机制是什么？如何保存清除状态 和 防止标记好的数据被主线程修改？
+-  空闲垃圾清除是利用了浏览器的什么机制？
+
+
+
+- 消息队列和事件循环是来解决什么问题的？
+- 什么是消息队列？
+- 什么是事件循环？
+- 在宏任务和宏任务之间会串插些什么？
 
